# CardanoCodex-23

./: README.md
DCentral/: LICENSE  README.md  prepare-and-submit-tx.sh  tps-cooker.cabal
DCentral/resources/: recipe-sample.csv  recipe.csv
DCentral/runtime/: batched-tx.sh-demo  execute-transaction.sh  signing-key.skey
DCentral/src/: Properties.hs  TxChef.hs  Types.hs
TahaaCode/: README.md  package.json  pnpm-lock.yaml
TahaaCode/pages/: _app.tsx  index.tsx  send.tsx
TahaaCode/styles/: globals.css
Team UV/clg-fee-piggy-bank/: README.md
Team UV/clg-fee-piggy-bank/native-script/: piggybank_native_script.cbor  piggybankaddress.txt
Team UV/clg-fee-piggy-bank/smart-contracts/Aiken/offchain/: deposit.ts  withdraw.ts
Team UV/clg-fee-piggy-bank/smart-contracts/Aiken/validator/: piggy.ak
Team UV/clg-fee-piggy-bank/website/starter-next-js-template/: README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
Team UV/clg-fee-piggy-bank/website/starter-next-js-template/pages/: _app.js  index.js
Team UV/clg-fee-piggy-bank/website/starter-next-js-template/styles/: globals.css
Vignesh/: Readme.md  Sample.csv  airdrop.ts  config.ts  helper.ts
Vinayek/: README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
Vinayek/src/backend/: mint.ts  wallet.ts
Vinayek/src/components/: AppLayout.tsx  FundCard.tsx  Lounge.tsx
Vinayek/src/context/: data.ts  wallet.ts
Vinayek/src/pages/: [club_id].tsx  _app.tsx  index.tsx
Vinayek/src/pages/api/: create-mining-transaction.ts  sign-transaction.ts
Vinayek/src/server/: index.ts  maestro.ts  videosdk.ts
Vinayek/src/styles/: globals.css
ganeshnit/blockmon/: HELP.md  README.md  blockmon.pptx  pom.xml
ganeshnit/blockmon/notes/bf-tx/: transaction.json
ganeshnit/blockmon/notes/comp/: block  koi
ganeshnit/blockmon/notes/cstream/: tx_channel
ganeshnit/blockmon/notes/demo/: curl-request.adoc  test-reqs.txt
ganeshnit/blockmon/src/main/java/blockmon/: AppConfig.java  CardanohookApplication.java  SchedulerConfig.java
ganeshnit/blockmon/src/main/java/blockmon/adapter/: BlockfrostQueryAdapter.java  KoiosQueryAdapter.java  TransmissionAdapter.java
ganeshnit/blockmon/src/main/java/blockmon/adapter/blockfrost/: BlockfrostAdapterMainnet.java  BlockfrostAdapterPreprod.java
ganeshnit/blockmon/src/main/java/blockmon/adapter/koios/: KoiosAdapterMainnet.java
ganeshnit/blockmon/src/main/java/blockmon/constants/: AppConstants.java  Constants.java
ganeshnit/blockmon/src/main/java/blockmon/controller/: AppMonController.java  MockController.java  PlatformController.java  SubscriptionController.java
ganeshnit/blockmon/src/main/java/blockmon/dto/: Dto.java  SubscribedTxDto.java  TransactionInfoDto.java  UtilDto.java
ganeshnit/blockmon/src/main/java/blockmon/entity/: AbstractAuditableEntity.java  EnumerationEntity.java  MockWebhookReceiptEntity.java  QueryTargetEntity.java  StatsEntity.java  SubscribedTxEntity.java  TransactionObjEntity.java  TxStatusEntity.java
ganeshnit/blockmon/src/main/java/blockmon/exception/: BlockfrostAdaptorException.java  DuplicateRequestException.java  EmailNotVerifiedException.java  EmailServiceException.java  Error.java  ErrorCode.java  ErrorUtils.java  InvalidPayloadException.java  ItemAlreadyExistsException.java  ItemNotFoundException.java  LimitExceededException.java  ResourceNotCreatedException.java  ResourceNotFoundException.java  RestApiErrorHandler.java  TooManyRequestsException.java  UnauthorisedException.java
ganeshnit/blockmon/src/main/java/blockmon/model/: SubscriptionRequest.java
ganeshnit/blockmon/src/main/java/blockmon/repository/: MockWebhookReceiptRepository.java  QueryTargetRepository.java  StatusRepository.java  SubscribedTxRepository.java  TransactionObjectRepository.java
ganeshnit/blockmon/src/main/java/blockmon/service/: MockWebhookReceiptService.java  MockWebhookReceiptServiceImpl.java  SubscriptionService.java  SubscriptionServiceImpl.java  TransactionObjService.java  TransactionObjServiceImpl.java
ganeshnit/blockmon/src/main/resources/: application-local.properties  application-mock-server.properties  application.properties  data.sql  logback-spring.xml
ganeshnit/blockmon/src/test/java/blockmon/: CardanohookApplicationTests.java
ganeshnit/blockmon/src/test/java/blockmon/adapter/: BlockfrostAdapterPreprodIT.java
ganeshnit/blockmon/src/test/java/blockmon/controller/: MockControllerIT.java  SubscriptionControllerIT.java
ganeshnit/blockmon/src/test/java/blockmon/scheduling/: SchedulerServicesIT.java
ganeshnit/blockmon/src/test/java/blockmon/service/: BlockfrostQueryServiceIT.java  KoiosQueryServiceIT.java  ScheduledQueryManagerIT.java  TransmissionServiceIT.java
ganeshnit/blockmon/src/test/java/blockmon/util/: JsonStorageTest.java
ganeshnit/blockmon/src/test/resources/: local-test-application.properties  test-data.sql
lambdac/: README.md  restful-cardano-smart-contracts.cabal  start-endpoint-server.sh
lambdac/app/: AttributeServer.hs  pab.hs  server-main.hs
lambdac/src/: ProjectPAB.hs
lambdac/src/Plutus/Rest/: Utils.hs
lambdac/src/Sample/: Runtime.hs
lambdac/src/Sample/Contracts/: Escrow.hs  EscrowTrace.hs  TokenMinter.hs  TokenMinterTrace.hs  Types.hs
(+13 files in other folders)
